--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -653,6 +653,30 @@ config MODS
 
 	If unsure, say N here.
 
+
+config TEGRA_PROC_POWER_MODEL
+	bool
+	help
+	  A simple model of processor power relating voltage, frequency,
+	  cores, and chip specific data. Used by various drivers.
+
+config NV_GAMEPAD_RESET
+	tristate "Nvidia Gamepad Reset Driver"
+	help
+	 This driver provides an interface that can be used to recover
+	 gamepad uC when needed
+
+config SAF775x_HWDEP
+        tristate "SAF775x HWDEP Driver"
+        depends on I2C
+
+config UID_SYS_STATS
+	tristate "Per-UID statistics""
+	depends on PROFILING
+	help
+	  Per UID based cpu time statistics exported to /proc/uid_cputime
+	  Per UID based io statistics exported to /proc/uid_io
+
 config SENSORS_AK09911
 	tristate "AK09911 compass support"
 	default n
