--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -671,7 +671,7 @@ config SAF775x_HWDEP
         depends on I2C
 
 config UID_SYS_STATS
-	tristate "Per-UID statistics""
+	bool "Per-UID statistics"
 	depends on PROFILING
 	help
 	  Per UID based cpu time statistics exported to /proc/uid_cputime
