mocha:add Atmel touchscreens

--- a/arch/arm/configs/tegra12_android_defconfig
+++ b/arch/arm/configs/tegra12_android_defconfig
@@ -178,6 +178,10 @@ CONFIG_BT_HIDP=y
 CONFIG_CFG80211=y
 CONFIG_NL80211_TESTMODE=y
 CONFIG_CAIF=y
+
+CONFIG_NFC=y
+CONFIG_BCM2079X_NFC=y
+
 CONFIG_PLATFORM_ENABLE_IOMMU=y
 CONFIG_CONNECTOR=y
 CONFIG_BLK_DEV_LOOP=y
@@ -246,6 +250,7 @@ CONFIG_JOYSTICK_XPAD=y
 # CONFIG_TOUCHSCREEN_RM31080A is not set
 # CONFIG_TOUCHSCREEN_SYN_RMI4_SPI is not set
 # CONFIG_TOUCHSCREEN_MAXIM_STI is not set
+
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_KEYCHORD=y
 CONFIG_INPUT_UINPUT=y
@@ -589,6 +594,7 @@ CONFIG_CRYPTO_DEV_TEGRA_SE=y
 CONFIG_CRYPTO_DEV_TEGRA_SE_NO_ALG_SUPPORT=y
 
 
+
 # Enable CONFIG_SECCOMP needed for android 7.1.2
 CONFIG_SECCOMP=y
 
@@ -783,4 +789,8 @@ CONFIG_TRUSTED_LITTLE_KERNEL=y
 # Zram
 CONFIG_ZRAM=y
 CONFIG_ZRAM_LZ4_COMPRESS=y
+
+
+# Firmware
+CONFIG_FIRMWARE_IN_KERNEL=y
 
