--- a/arch/arm/configs/tegra12_android_defconfig
+++ b/arch/arm/configs/tegra12_android_defconfig
@@ -248,6 +248,9 @@ CONFIG_KEYBOARD_TEGRA=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_JOYSTICK=y
 CONFIG_JOYSTICK_XPAD=y
+# CONFIG_TOUCHSCREEN_RM31080A is not set
+# CONFIG_TOUCHSCREEN_SYN_RMI4_SPI is not set
+# CONFIG_TOUCHSCREEN_MAXIM_STI is not set
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_KEYCHORD=y
 CONFIG_INPUT_UINPUT=y
