--- a/arch/arm/boot/dts/tegra124-mocha.dts
+++ b/arch/arm/boot/dts/tegra124-mocha.dts
@@ -124,7 +124,6 @@
 			atmel,gpio-mask = <0xc>;
 			atmel,vendor-info = <0x03eb>;
 			atmel,product-info = <0x214f>;
-
 			atmel,config-array-size = <2>;
 
 			atmel,cfg_1 {
@@ -136,6 +135,7 @@
 				atmel,mxt-cfg-name = "mxt1664t_config.fw";
 				atmel,vendor-id = <0x4>;
 				atmel,mxt-fw-name = "mxt1664t.fw";
+				atmel,key-codes = <158 102 139 116>;
 
 			};
 			atmel,cfg_2 {
@@ -147,6 +147,7 @@
 				atmel,mxt-cfg-name = "mxt1066t_config.fw";
 				atmel,vendor-id = <0x4>;
 				atmel,mxt-fw-name = "mxt1066t.fw";
+				atmel,key-codes = <139 102 158 116>;
 			};
 		};
 	};
