--- a/arch/arm/configs/tegra12_android_defconfig
+++ b/arch/arm/configs/tegra12_android_defconfig
@@ -597,7 +597,7 @@ CONFIG_CRYPTO_TWOFISH=y
 # CONFIG_CRYPTO_ANSI_CPRNG is not set
 CONFIG_CRYPTO_DEV_TEGRA_SE=y
 CONFIG_CRYPTO_DEV_TEGRA_SE_NO_ALG_SUPPORT=y
-CONFIG_TRUSTED_LITTLE_KERNEL=y
+
 
 # Enable CONFIG_SECCOMP needed for android 7.1.2
 CONFIG_SECCOMP=y
@@ -753,4 +753,8 @@ CONFIG_TRACE_WARMBOOT=y
 # Disable GPS and NFC
 CONFIG_GPS=n
 CONFIG_NFC=n
+
+
+# Security
+CONFIG_TRUSTED_LITTLE_KERNEL=y
 
