mocha:arch: arm: configs: mocha: firmware and nvram paths now in DT

--- a/arch/arm/configs/tegra12_android_defconfig
+++ b/arch/arm/configs/tegra12_android_defconfig
@@ -688,10 +688,24 @@ CONFIG_SENSORS_AK09911=y
 # CONFIG_BMP280_I2C is not set
 CONFIG_INV_MPU_IIO=y
 CONFIG_DTS_INV_MPU_IIO=y
-# Cameras
-CONFIG_VIDEO_IMX179=y
-CONFIG_VIDEO_AD5823=y
-CONFIG_VIDEO_OV5693=y
+
+# LED
+CONFIG_LEDS_LP5521=y
+
+# Sound
+CONFIG_SND_SOC_TEGRA_RT5671=y
+
+# Wifi
+CONFIG_BCMDHD=y
+CONFIG_BCMDHD_SDIO=y
+CONFIG_BCM4354=y
+CONFIG_BCMDHD_HW_OOB=y
+CONFIG_BCMDHD_DISABLE_MCC=y
+
+# Net
+CONFIG_IP_NF_TARGET_TTL=y
+
+
 # Other
 CONFIG_LOG_BUF_SHIFT=21
 CONFIG_CROSS_COMPILE=""
@@ -702,7 +716,7 @@ CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_DEFAULT_DEADLINE=y
 
-<<<<<<< HEAD
+
 # Multirom support
 CONFIG_KEXEC=y
 CONFIG_KEXEC_HARDBOOT=y
