--- a/arch/arm/configs/tegra12_android_defconfig
+++ b/arch/arm/configs/tegra12_android_defconfig
@@ -180,10 +180,6 @@ CONFIG_BT_HIDP=y
 CONFIG_CFG80211=y
 CONFIG_NL80211_TESTMODE=y
 CONFIG_CAIF=y
-CONFIG_NFC=y
-CONFIG_BCM2079X_NFC=y
-CONFIG_FIRMWARE_IN_KERNEL=y
-CONFIG_CMA=y
 CONFIG_PLATFORM_ENABLE_IOMMU=y
 CONFIG_CONNECTOR=y
 # CONFIG_ZRAM is not set
@@ -626,7 +622,7 @@ CONFIG_MMC_SDHCI_IO_ACCESSORS=y
 # CONFIG_PCIEPORTBUS is not set
 # Wifi mocha
 CONFIG_RFKILL=y
-CONFIG_RFKILL_GPIO=y
+CONFIG_FRFKILL_GPIO=y
 CONFIG_WIFI_CONTROL_FUNC=y
 CONFIG_BCM4354=y
 CONFIG_BCMDHD=y
@@ -767,6 +763,7 @@ CONFIG_TRACE_WARMBOOT=y
 # Disable GPS and NFC
 CONFIG_GPS=n
 CONFIG_NFC=n
+CONFIG_BCM2079X_NFC=n
 
 
 # Security
