--- a/arch/arm/configs/tegra12_android_defconfig
+++ b/arch/arm/configs/tegra12_android_defconfig
@@ -701,12 +701,21 @@ CONFIG_LEDS_LP5521=y
 # Sound
 CONFIG_SND_SOC_TEGRA_RT5671=y
 
+
 # Wifi
 CONFIG_BCMDHD=y
 CONFIG_BCMDHD_SDIO=y
 CONFIG_BCM4354=y
 CONFIG_BCMDHD_HW_OOB=y
 CONFIG_BCMDHD_DISABLE_MCC=y
+
+# FS
+CONFIG_SDCARD_FS=y
+
+# Governors
+CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE=y
+CONFIG_CPU_FREQ_GOV_SMARTMAX=y
+CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
 
 
 # Other
