mocha: configs: don't duplicate file sytems section

--- a/arch/arm/configs/tegra12_android_defconfig
+++ b/arch/arm/configs/tegra12_android_defconfig
@@ -701,16 +701,17 @@ CONFIG_LEDS_LP5521=y
 # Sound
 CONFIG_SND_SOC_TEGRA_RT5671=y
 
+# File systems
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_FS_SECURITY=y
+CONFIG_SDCARD_FS=y
 
-# Wifi
+ Wifi
 CONFIG_BCMDHD=y
 CONFIG_BCMDHD_SDIO=y
 CONFIG_BCM4354=y
 CONFIG_BCMDHD_HW_OOB=y
 CONFIG_BCMDHD_DISABLE_MCC=y
-
-# FS
-CONFIG_SDCARD_FS=y
 
 # Governors
 CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE=y
