--- a/arch/arm/configs/tegra12_android_defconfig
+++ b/arch/arm/configs/tegra12_android_defconfig
@@ -281,16 +281,9 @@ CONFIG_GPIO_PALMAS=y
 # CONFIG_GPIO_MAX77660 is not set
 CONFIG_POWER_SUPPLY_EXTCON=y
 CONFIG_CHARGER_BQ2419X=y
-CONFIG_CHARGER_BQ2471X=y
-# CONFIG_CHARGER_MAX77665 is not set
-CONFIG_BATTERY_SBS=y
-CONFIG_BATTERY_MAX17048=y
-CONFIG_BATTERY_BQ27441=y
-# CONFIG_BATTERY_LC709203F is not set
 CONFIG_CHARGER_GPIO=y
-# CONFIG_CHARGER_EXTCON_MAX77660 is not set
-# CONFIG_BATTERY_CW201X is not set
-# CONFIG_POWER_RESET_AS3722 is not set
+CONFIG_POWER_RESET_AS3722=y
+
 CONFIG_POWER_OFF_PALMAS=y
 CONFIG_THERMAL_GOV_PID=y
 CONFIG_GENERIC_ADC_THERMAL=y
@@ -655,6 +648,17 @@ CONFIG_CHARGER_BQ2477X=y
 # Battery
 CONFIG_BATTERY_BQ27x00=y
 CONFIG_BATTERY_BQ27X00_I2C=y
+# CONFIG_BATTERY_SBS is not set
+# CONFIG_BATTERY_MAX17048 is not set
+# CONFIG_BATTERY_BQ27441 is not set
+# CONFIG_BATTERY_LC709203F is not set
+# CONFIG_BATTERY_CW201X is not set
+# CONFIG_CHARGER_BQ2471X is not set
+# CONFIG_CHARGER_BQ2477X is not set
+# CONFIG_CHARGER_MAX77665 is not set
+# CONFIG_CHARGER_EXTCON_MAX77660 is not set
+
+
 # Bluetooth
 CONFIG_BLUEDROID_PM=y
 CONFIG_BT_PROTOCOL_DRIVER=y
