--- a/arch/arm/configs/tegra12_android_defconfig
+++ b/arch/arm/configs/tegra12_android_defconfig
@@ -695,7 +695,7 @@ CONFIG_VIDEO_OV5693=y
 # Other
 CONFIG_LOG_BUF_SHIFT=21
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="_Dargons_V1.00"
+CONFIG_LOCALVERSION="DargonsR21.7-v1.0"
 CONFIG_LOCALVERSION_AUTO=n
 # IO Schedulers
 CONFIG_IOSCHED_NOOP=y
