--- a/arch/arm/configs/tegra12_android_defconfig
+++ b/arch/arm/configs/tegra12_android_defconfig
@@ -767,6 +767,7 @@ CONFIG_SYSEDP_FRAMEWORK=y
 CONFIG_F2FS_FS=y
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_IOSCHED_SWITCHER=y
+CONFIG_AIO_SSD_ONLY=y
 # ADF
 #CONFIG_ADF is not set
 #CONFIG_ADF_TEGRA_FBDEV is not set
