mocha:configs: mocha: disable cec and hdmi

--- a/arch/arm/configs/tegra12_android_defconfig
+++ b/arch/arm/configs/tegra12_android_defconfig
@@ -604,7 +604,7 @@ CONFIG_DYNAMIC_FSYNC=y
 # MOCHA Changes
 #
 CONFIG_MACH_MOCHA=y
-
+CONFIG_TEGRA_CEC_SUPPORT= id not set
 CONFIG_WATCHDOG=y
 CONFIG_WATCHDOG_CORE=y
 CONFIG_WATCHDOG_NOWAYOUT=y
@@ -676,6 +676,7 @@ CONFIG_V4L2_FM_DRIVER=y
 CONFIG_LEDS_LP5521=y
 # Sound
 CONFIG_SND_SOC_TEGRA_RT5671=y
+CONFIG_SND_HDA_CODEC_HDMI=n
 # Backlight
 CONFIG_OF=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
