mocha:configs: mocha: enable a couple preempt configs â

--- a/arch/arm/configs/tegra12_android_defconfig
+++ b/arch/arm/configs/tegra12_android_defconfig
@@ -574,7 +574,7 @@ CONFIG_DEBUG_SECTION_MISMATCH=y
 CONFIG_LOCKUP_DETECTOR=y
 # CONFIG_DETECT_HUNG_TASK is not set
 CONFIG_SCHEDSTATS=y
-# CONFIG_DEBUG_PREEMPT is not set
+CONFIG_DEBUG_PREEMPT=y
 CONFIG_DEBUG_INFO=y
 CONFIG_DEBUG_VM=y
 CONFIG_FUNCTION_TRACER=y
@@ -603,6 +603,7 @@ CONFIG_DYNAMIC_FSYNC=y
 #
 # MOCHA Changes
 #
+CONFIG_PREEMPT_TRACER=y
 CONFIG_MACH_MOCHA=y
 CONFIG_TEGRA_CEC_SUPPORT= id not set
 CONFIG_WATCHDOG=y
