--- a/arch/arm/configs/tegra12_android_defconfig
+++ b/arch/arm/configs/tegra12_android_defconfig
@@ -722,6 +722,8 @@ CONFIG_LOG_BUF_SHIFT=21
 CONFIG_CROSS_COMPILE=""
 CONFIG_LOCALVERSION="DargonsR21.7-v2.0"
 CONFIG_LOCALVERSION_AUTO=n
+CONFIG_IP_NF_MATCH_RPFILTER=y
+CONFIG_IP6_NF_MATCH_RPFILTER=y
 
 
 # IO Schedulers
