mocha: configs enable zram

--- a/arch/arm/configs/tegra12_android_defconfig
+++ b/arch/arm/configs/tegra12_android_defconfig
@@ -775,3 +775,7 @@ CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 # Security
 CONFIG_TRUSTED_LITTLE_KERNEL=y
 
+# Zram
+CONFIG_ZRAM=y
+CONFIG_ZRAM_LZ4_COMPRESS=y
+
