--- a/arch/arm/configs/tegra12_android_defconfig
+++ b/arch/arm/configs/tegra12_android_defconfig
@@ -180,7 +180,7 @@ CONFIG_NL80211_TESTMODE=y
 CONFIG_CAIF=y
 CONFIG_PLATFORM_ENABLE_IOMMU=y
 CONFIG_CONNECTOR=y
-# CONFIG_ZRAM is not set
+CONFIG_ARCH_MMAP_RND_BITS=16
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_AD525X_DPOT=y
 CONFIG_AD525X_DPOT_I2C=y
