mocha:arch: arm: configs: mocha: enable synaptics touchscreen

--- a/arch/arm/configs/tegra12_android_defconfig
+++ b/arch/arm/configs/tegra12_android_defconfig
@@ -636,8 +636,10 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE=y
+CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_TEST_REPORTING=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_EXTRA_SYSFS=y
 CONFIG_CUSTOM_DT2W=y
+
 #SD cards
 CONFIG_MMC_PERF_PROFILING=y
 
@@ -708,7 +710,7 @@ CONFIG_BCMDHD_DISABLE_MCC=y
 # Other
 CONFIG_LOG_BUF_SHIFT=21
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="DargonsR21.7-v3.5"
+CONFIG_LOCALVERSION="DargonsR21.8-v1.0"
 CONFIG_LOCALVERSION_AUTO=n
 CONFIG_IP_NF_MATCH_RPFILTER=y
 CONFIG_IP6_NF_MATCH_RPFILTER=y
@@ -793,4 +795,8 @@ CONFIG_ZRAM_LZ4_COMPRESS=y
 
 # Firmware
 CONFIG_FIRMWARE_IN_KERNEL=y
+
+
+
+
 
