--- a/arch/arm/configs/tegra12_android_defconfig
+++ b/arch/arm/configs/tegra12_android_defconfig
@@ -520,8 +520,6 @@ CONFIG_ASYMMETRIC_KEY_TYPE=y
 CONFIG_ASYMMETRIC_PUBLIC_KEY_SUBTYPE=y
 CONFIG_DM_ANDROID_VERITY=y
 CONFIG_ANDROID_TIMED_GPIO=y
-CONFIG_ANDROID_LOW_MEMORY_KILLER=y
-# CONFIG_ANDROID_INTF_ALARM_DEV is not set
 CONFIG_SW_SYNC=y
 CONFIG_SW_SYNC_USER=y
 CONFIG_ION=y
@@ -806,6 +804,9 @@ CONFIG_GPS=n
 CONFIG_NFC=n
 CONFIG_BCM2079X_NFC=n
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_MEMCG=y
+CONFIG_MEMCG_SWAP=y
+
 
 
 # Security
