mocha: wifi works again

--- a/arch/arm/configs/tegra12_android_defconfig
+++ b/arch/arm/configs/tegra12_android_defconfig
@@ -625,7 +625,6 @@ CONFIG_MMC_SDHCI_IO_ACCESSORS=y
 CONFIG_RFKILL=y
 CONFIG_FRFKILL_GPIO=y
 CONFIG_WIFI_CONTROL_FUNC=y
-CONFIG_BCMDHD_NVRAM_PATH="/etc/firmware/nvram.txt"
 # Info from bootloader
 CONFIG_BOOT_INFO=y
 # Touchscreen
@@ -727,6 +726,7 @@ CONFIG_BCMDHD_SDIO=y
 CONFIG_BCM4354=y
 CONFIG_BCMDHD_HW_OOB=y
 CONFIG_BCMDHD_DISABLE_MCC=y
+CONFIG_BCMDHD_NVRAM_PATH="/vendor/etc/nvram.txt"
 
 
 
