mocha: enable simple_lmk

--- a/arch/arm/configs/tegra12_android_defconfig
+++ b/arch/arm/configs/tegra12_android_defconfig
@@ -804,9 +804,9 @@ CONFIG_GPS=n
 CONFIG_NFC=n
 CONFIG_BCM2079X_NFC=n
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
-CONFIG_MEMCG=y
-CONFIG_MEMCG_SWAP=y
-
+CONFIG_MEMCG=n
+CONFIG_MEMCG_SWAP=n
+CONFIG_ANDROID_SIMPLE_LMK=y
 
 
 # Security
