--- a/arch/arm/boot/dts/tegra124-mocha.dts
+++ b/arch/arm/boot/dts/tegra124-mocha.dts
@@ -27,8 +27,14 @@
 #include "tegra124-platforms/tegra124-mocha-sysedp.dtsi"
 #include "tegra124-platforms/tegra124-mocha-camera.dtsi"
 #include "tegra124-platforms/tegra124-mocha-power-tree.dtsi"
+#include "tegra124-platforms/tegra124-mocha-sdhci.dtsi"
+#include "tegra124-platforms/tegra124-mocha-wireless.dtsi"
 #include "tegra124-platforms/tegra124-mocha-dfll.dtsi"
 #include "tegra124-platforms/tegra124-mocha-dvfs.dtsi"
+#include "tegra124-platforms/tegra124-mocha-thermal.dtsi"
+#include "tegra124-platforms/tegra124-mocha-edp.dtsi"
+#include "tegra124-platforms/tegra124-mocha-nct72.dtsi"
+#include "tegra124-platforms/tegra124-mocha-Tboard-Tdiode.dtsi"
 #include "panel-s-wqxga-7-9-x6.dtsi"
 
 / {
